# qft-sim

./: -  .clangd  CMakeLists.txt  README.md  bounds.cpp
.cache/clangd/index/: cat.cpp.F976D964FAA0D2CD.idx  cat.h.658AC3D52D557643.idx  cat.h.7E5A1E260E1D6D99.idx  cat.h.B229165BBE268BFB.idx  cat.hip.143D456DD8C4A9A6.idx  cat.hip.6E1C1A9A8FD0539D.idx  interact.cpp.40A5130D22DA1C2D.idx  main.cpp.7D39D77B9AA728BF.idx  main.cpp.BC096B64876DD301.idx  mat.h.07022E78367F0D03.idx  mat.h.87DFAF09CA22B1C1.idx  mat.hip.91880A29584B195D.idx  test_cat.cpp.87B692F350FE6808.idx  test_mat.cpp.71036FB3859EA555.idx
src/: CMakeLists.txt  cat.hip  decomp.cpp  interact.cpp  main.cpp  mat.hip  movie.cpp  play.cpp  quantum.cpp  vector_add.cpp
src/include/: cat.h  mat.h  quantum.h
tests/: CMakeLists.txt  test_cat.cpp  test_mat.cpp
